--- a/src/pages/Market/Market.module.css
+++ b/src/pages/Market/Market.module.css
@@ -131,7 +131,7 @@
 
 .market-sidebar {
   position: sticky;
-  top: 16px;
+  top: calc(var(--header-height) + 16px);
 }
 
 .market-main {
